<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/services"
        android:title="@string/services"
        android:icon="@drawable/ic_services"/>
    <item
        android:id="@+id/products"
        android:title="@string/products"
        android:icon="@drawable/ic_products"/>
    <item
        android:id="@+id/courses"
        android:title="Courses"
        android:icon="@drawable/ic_courses"/>
    <item
        android:id="@+id/contact"
        android:title="@string/contact_us"
        android:icon="@drawable/ic_contact"/>
    <item android:id="@+id/aboutUs"
        android:title="@string/about_us"
        android:icon="@drawable/ic_about"/>
    <item
        android:id="@+id/members"
        android:title="@string/members"
        android:icon="@drawable/ic_members"/>
    <item
        android:id="@+id/logIn"
        android:title="@string/log_in_member_s_only"
        android:icon="@drawable/ic_login"/>
    </group>

</menu>